--- a/style.css
+++ b/style.css
@@ -99,3 +99,33 @@ p {
 .about__text a {
   text-decoration: none;
 }
+.footer {
+  padding-bottom: 3em;
+}
+.social {
+  display: flex;
+  justify-content: center;
+}
+.social__item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  margin: 0 2em;
+}
+.social__icon {
+  display: block;
+  height: 40px;
+  transition: fill 0.2s linear;
+}
+.social__icon:hover {
+  fill: red;
+}
+.copyright {
+  text-align: center;
+}
+.copyright__text {
+  margin-top: 2em;
+  font-size: 1.4em;
+}
